unpackaged/main/default/objects/CM_Damage_Claim__c/CM_Damage_Claim__c.object-meta.xml
<CustomObject>
    <description>Case Management object used to collect information on Property of the injured party that may or may not be related to the CM Location, but specifically to the case itself.</description>
    <label>CM Damage Claim</label>
    <nameField>
        <label>CM Damage Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM Damage Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>