unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Associated_Policy__c.field-meta.xml
<CustomField>
    <fullName>Associated_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the policy that the property is tied to. If it is related to an insurance claim this property should be listed under the policy.</description>
    <inlineHelpText>Policy protecting this property.</inlineHelpText>
    <label>Associated Policy</label>
    <referenceTo>CM_Policy__c</referenceTo>
    <relationshipName>CM_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>