unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Damaged_Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Damaged_Property_Address__c</fullName>
    <description>Location of the damaged property or where the property itself was damaged.</description>
    <label>Damaged Property Address</label>
    <type>Address</type>
</CustomField>