unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Description_of_Damage__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Damage__c</fullName>
    <description>Used to apply open text description of what damage occurred on what.  You can get specific on the types of damage and be as thorough as needed.</description>
    <inlineHelpText>Description of the damage that was received on property for the claim.</inlineHelpText>
    <label>Description of Damage</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>