unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Description_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Property__c</fullName>
    <description>Provide a description of the objects in question, edifice or property owned by the client.  Allows for further descriptions to help identify them and reference them properly.</description>
    <inlineHelpText>Description of the property that will be referenced in policy and falls under the claim.</inlineHelpText>
    <label>Description of Property</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>