unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associate intake the property is tied to or used in.</description>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipName>CM_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>