unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Level_of_Damage__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Damage__c</fullName>
    <description>Level of damage that is measured for the claim to determine coverage or value.  each item represents a specific percentage value of how salvageable something is.  1-25% damage could be minor etc.</description>
    <inlineHelpText>Level of overall damage on property to be claimed.</inlineHelpText>
    <label>Level of Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Total Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>