unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The location at which the property is associated with, where it resides or where it was damaged or used etc.</description>
    <inlineHelpText>The location at which the property is associated with, where it resides or where it was damaged or used etc</inlineHelpText>
    <label>Location</label>
    <referenceTo>CM_Location__c</referenceTo>
    <relationshipName>CM_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>