unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Names_of_extra_Claimants__c.field-meta.xml
<CustomField>
    <fullName>Names_of_extra_Claimants__c</fullName>
    <description>This is used to gather information on who else is able to make a claim on the damage that occurred.  This can be related to property, vehicles, etc.  Can be related to Trusts etc.</description>
    <inlineHelpText>Names of people that have rights to claim value from the damage occurred.</inlineHelpText>
    <label>Names of extra Claimants</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>