unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Other_Structures_Damaged__c.field-meta.xml
<CustomField>
    <fullName>Other_Structures_Damaged__c</fullName>
    <description>FLOW ONLY: This is used to determine the structures damaged via the incident/event.  This can be a simple Yes or No check or very specific to the type of structure/structures damaged.</description>
    <inlineHelpText>Were other structures or improvements on a property damaged?</inlineHelpText>
    <label>Other Structures Damaged</label>
    <length>255</length>
    <type>Text</type>
</CustomField>