unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Owner_of_the_Property__c.field-meta.xml
<CustomField>
    <fullName>Owner_of_the_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This represents the party that is associated as the owner of the affected property</description>
    <label>Owner of the Property</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CM_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>