unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Physical_Description_of_Injury__c.field-meta.xml
<CustomField>
    <fullName>Physical_Description_of_Injury__c</fullName>
    <description>Used to grab case management questions and fill out the description of a physical injury to a person or persons.</description>
    <inlineHelpText>The description of physical injury a person or persons received.</inlineHelpText>
    <label>Physical - Description of Injury</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>