unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <description>Use to define the type of damaged property that is being handled.  This determines the type of claim and associated values.</description>
    <inlineHelpText>Type of property that was damaged</inlineHelpText>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>