unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Received_Damage__c.field-meta.xml
<CustomField>
    <fullName>Received_Damage__c</fullName>
    <description>This is a field to determine what was damaged during a fire and get specific categories that were damaged.  We are able to ask hyper specific questions on questionnaires and the output can be put into categories. (i.e. Where any vehicles damaged? &#39;Yes&#39; &#39;No&#39; = &#39;Vehicles&#39; &#39;Not Damaged&#39; on the back end.)</description>
    <inlineHelpText>What category received damage?</inlineHelpText>
    <label>Received Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicles</fullName>
            </value>
            <value>
                <fullName>Not Damaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>