unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Services_Required__c.field-meta.xml
<CustomField>
    <fullName>Services_Required__c</fullName>
    <description>FLOW ONLY: This allows a description of what services were or may have been required for the treatment or correction of the damage.  This could be medical attention, Carpet Cleaning, Auto Body Repair, etc.</description>
    <inlineHelpText>Type of services received due to damage that was received.</inlineHelpText>
    <label>Services Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>