unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Total_Property_Worth__c.field-meta.xml
<CustomField>
    <fullName>Total_Property_Worth__c</fullName>
    <description>This is used to verify property value.  Used in claims to determine the total value of damage caused.  Started with wildfires tort</description>
    <inlineHelpText>Total Value of the property in question on the claim</inlineHelpText>
    <label>Total Property Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>