unpackaged/main/default/objects/CM_Damage_Claim__c/fields/Total_Square_Foot__c.field-meta.xml
<CustomField>
    <fullName>Total_Square_Foot__c</fullName>
    <description>Used to determine the square foot measurment of property building that is damaged.  Specific to edifices and not individual items. Motor Homes should in theory count in vehicles and not in here.</description>
    <inlineHelpText>Total Square Footage of the edifice that was damaged</inlineHelpText>
    <label>Total Square Foot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>